--- a/src/MainBundle/Resources/views/Component/_category.html.twig
+++ b/src/MainBundle/Resources/views/Component/_category.html.twig
@@ -1,11 +1,10 @@
 <ul class="block-category">
-  {{ dump() }}
-  {#{% for category in categories %}#}
-    {#<li>#}
-      {#<a href="{{ path('category', {'id' : category.id, 'name' : category.name|replace ({' ': '_'})}) }}">#}
-        {#{{ category.name }}#}
-        {#( {{ render(controller('MainBundle:Main:showCountCategory', {'id': category.id})) }})#}
-      {#</a>#}
-    {#</li>#}
-  {#{% endfor %}#}
+  {% for category in categories %}
+    <li>
+      <a href="{{ path('category', {'id' : category.id, 'name' : category.name|replace ({' ': '_'})}) }}">
+        {{ category.name }}
+        {{ category.post_count }}
+      </a>
+    </li>
+  {% endfor %}
 </ul>
