--- a/src/MainBundle/Resources/views/Component/_category.html.twig
+++ b/src/MainBundle/Resources/views/Component/_category.html.twig
@@ -3,7 +3,7 @@
     <li>
       <a href="{{ path('category', {'id' : category.id, 'name' : category.name|replace ({' ': '_'})}) }}">
         {{ category.name }}
-        {{ category.post_count }}
+        ({{ category.post_count }})
       </a>
     </li>
   {% endfor %}
