--- a/src/MainBundle/Resources/views/Component/_navigation.html.twig
+++ b/src/MainBundle/Resources/views/Component/_navigation.html.twig
@@ -4,10 +4,10 @@
     </div>
     <div class="blog-category">
         <p class="blog-nav-title">Categories</p>
-        {{ render(controller('MainBundle:Main:showCategory')) }}
+        {{ render(controller('MainBundle:Category:showCategory')) }}
     </div>
     <div class="blog-teg">
         <p class="blog-nav-title">Tags</p>
-        {{ render(controller('MainBundle:Main:showTag')) }}
+        {{ render(controller('MainBundle:Tag:showTag')) }}
     </div>
 </div>
