--- a/src/MainBundle/Resources/views/Component/_tag.html.twig
+++ b/src/MainBundle/Resources/views/Component/_tag.html.twig
@@ -1,9 +1,13 @@
 <ul class="block-tags">
+  {% if tags is not empty %}
     {% for tag in tags %}
-        <li>
-            <a class="chip" href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">
-                {{ tag.name }}
-            </a>
-        </li>
+      <li>
+        <a class="chip" href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">
+          {{ tag.name }}
+        </a>
+      </li>
     {% endfor %}
+  {% else %}
+    <p>No tags</p>
+  {% endif %}
 </ul>
