--- a/src/MainBundle/Resources/views/Component/_post_content.html.twig
+++ b/src/MainBundle/Resources/views/Component/_post_content.html.twig
@@ -1,80 +1,82 @@
 <div class="blog-content">
-    {{ dump() }}
     {% if posts is not empty %}
+
         {% for post in posts.items %}
-            {% if post.postImg is not empty %}
+            {% if post.0.postImg is not empty %}
                 <div class="blog-item blog-item-img">
                     <div class="blog-img">
-                        <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }} ">
-                            <img src="{{ post.postImg }}" alt="{{ post.shortTitle }}"/>
+                        <a href="{{ path('blog-post', {'id' : post.0.id, 'shortTitle' : post.0.shortTitle|replace ({' ': '_'})}) }} ">
+                            <img src="{{ post.0.postImg }}" alt="{{ post.0.shortTitle }}"/>
                         </a>
                     </div>
                     <div class="body-title">
-                        <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-                            {{ post.shortTitle }}
+                        <a href="{{ path('blog-post', {'id' : post.0.id, 'shortTitle' : post.0.shortTitle|replace ({' ': '_'})}) }}">
+                            {{ post.0.shortTitle }}
                         </a>
                     </div>
                     <div class="body-descriptions">
-                        <p>{{ post.shortDescriptions }}</p>
+                        <p>{{ post.0.shortDescriptions }}</p>
                     </div>
                     <div class="body-readmore">
-                        <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">Read More</a>
+                        <a href="{{ path('blog-post', {'id' : post.0.id, 'shortTitle' : post.0.shortTitle|replace ({' ': '_'})}) }}">Read
+                            More</a>
                     </div>
                     <div class="body-footer">
                         <div class="body-footer-user">
-                            {% if post.user.img is not empty %}
-                                <img src="/user_images/{{ post.user.img }}" alt="{{ post.user.username }}">
-                                {% if (post.user.name and post.user.soname) is not empty %}
-                                    {{ post.user.name }}  {{ post.user.soname }}
+                            {% if post.0.user.img is not empty %}
+                                <img src="/user_images/{{ post.0.user.img }}" alt="{{ post.0.user.username }}">
+                                {% if (post.0.user.name and post.0.user.soname) is not empty %}
+                                    {{ post.0.user.name }}  {{ post.0.user.soname }}
                                 {% else %}
-                                    {{ post.user.username }}
+                                    {{ post.0.user.username }}
                                 {% endif %}
                             {% else %}
-                                {{ post.user.username }}
+                                {{ post.0.user.username }}
                             {% endif %}
                         </div>
                         <div class="body-footer-date">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
-                            {{ post.postDate | date("M d") }}
+                            {{ post.0.postDate | date("M d") }}
                         </div>
                         <div class="blog-footer-category">
                             <i class="fa fa-folder-o" aria-hidden="true"></i>
-                            <a href="{{ path('category', {'id' : post.category.id, 'name' : post.category.name|replace ({' ': '_'})}) }}">{{ post.category.name }}</a>
+                            <a href="{{ path('category', {'id' : post.0.category.id, 'name' : post.0.category.name|replace ({' ': '_'})}) }}">{{ post.0.category.name }}</a>
                         </div>
                         <div class="like-block">
-                            {#{% if form_like is not empty %}#}
-                                {#{% if show_status_like == 1 %}#}
-                                    {#<div class="blog-like-form active">#}
-                                        {#{{ form_start(form_like) }}#}
-                                        {#{{ form_row(form_like.send) }}#}
-                                        {#{{ form_end(form_like) }}#}
-                                    {#</div>#}
-                                {#{% endif %}#}
 
-                                {#{% if show_status_like == 0 %}#}
-                                    {#<div class="blog-like-form">#}
-                                        {#{{ form_start(form_like) }}#}
-                                        {#{{ form_row(form_like.send) }}#}
-                                        {#{{ form_end(form_like) }}#}
-                                    {#</div>#}
-                                {#{% endif %}#}
+
+                            {#{% if form_like is not empty %}#}
+                            {#{% if show_status_like == 1 %}#}
+                            {#<div class="blog-like-form active">#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
+                            {#</div>#}
+                            {#{% endif %}#}
+
+                            {#{% if show_status_like == 0 %}#}
+                            {#<div class="blog-like-form">#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
+                            {#</div>#}
+                            {#{% endif %}#}
                             {#{% endif %}#}
 
                             {#<div class="blog-like-form active">#}
-                                {#{{ form_start(form_like) }}#}
-                                {#{{ form_row(form_like.send) }}#}
-                                {#{{ form_end(form_like) }}#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
                             {#</div>#}
 
-                            {#<div class="blog-like-count">#}
-                                {#{% for like in show_count_like %}#}
-                                    {#{{ like.like_count }}#}
-                                {#{% endfor %}#}
-                            {#</div>#}
+                            <div class="blog-like-count">
+                                {{ post.count_post_like }}
+                            </div>
+
                         </div>
                         <div class="body-footer-teg">
                             <i class="fa fa-tags" aria-hidden="true"></i>
-                            {% for tag in post.tag %}
+                            {% for tag in post.0.tag %}
                                 <a href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                             {% endfor %}
                         </div>
@@ -84,71 +86,72 @@
             {% else %}
                 <div class="blog-item blog-item-no-img">
                     <div class="body-title">
-                        <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">
-                            {{ post.shortTitle }}
+                        <a href="{{ path('blog-post', {'id' : post.0.id, 'shortTitle' : post.0.shortTitle|replace ({' ': '_'})}) }}">
+                            {{ post.0.shortTitle }}
                         </a>
                     </div>
                     <div class="body-descriptions">
-                        <p>{{ post.shortDescriptions }}</p>
+                        <p>{{ post.0.shortDescriptions }}</p>
                     </div>
                     <div class="body-readmore">
-                        <a href="{{ path('blog-post', {'id' : post.id, 'shortTitle' : post.shortTitle|replace ({' ': '_'})}) }}">Read More</a>
+                        <a href="{{ path('blog-post', {'id' : post.0.id, 'shortTitle' : post.0.shortTitle|replace ({' ': '_'})}) }}">Read
+                            More</a>
                     </div>
                     <div class="body-footer">
                         <div class="body-footer-user">
-                            {% if post.user.img is not empty %}
-                                <img src="/user_images/{{ post.user.img }}" alt="{{ post.user.username }}">
-                                {% if (post.user.name and post.user.soname) is not empty %}
-                                    {{ post.user.name }}  {{ post.user.soname }}
+                            {% if post.0.user.img is not empty %}
+                                <img src="/user_images/{{ post.0.user.img }}" alt="{{ post.0.user.username }}">
+                                {% if (post.0.user.name and post.0.user.soname) is not empty %}
+                                    {{ post.0.user.name }}  {{ post.0.user.soname }}
                                 {% else %}
-                                    {{ post.user.username }}
+                                    {{ post.0.user.username }}
                                 {% endif %}
                             {% else %}
-                                {{ post.user.username }}
+                                {{ post.0.user.username }}
                             {% endif %}
                         </div>
                         <div class="body-footer-date">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
-                            {{ post.postDate | date("M d") }}
+                            {{ post.0.postDate | date("M d") }}
                         </div>
                         <div class="blog-footer-category">
                             <i class="fa fa-folder-o" aria-hidden="true"></i>
-                            <a href="{{ path('category', {'id' : post.category.id, 'name' : post.category.name|replace ({' ': '_'})}) }}">{{ post.category.name }}</a>
+                            <a href="{{ path('category', {'id' : post.0.category.id, 'name' : post.0.category.name|replace ({' ': '_'})}) }}">{{ post.0.category.name }}</a>
                         </div>
                         <div class="like-block">
-                            {#{% if form_like is not empty %}#}
-                                {#{% if show_status_like == 1 %}#}
-                                    {#<div class="blog-like-form active">#}
-                                        {#{{ form_start(form_like) }}#}
-                                        {#{{ form_row(form_like.send) }}#}
-                                        {#{{ form_end(form_like) }}#}
-                                    {#</div>#}
-                                {#{% endif %}#}
 
-                                {#{% if show_status_like == 0 %}#}
-                                    {#<div class="blog-like-form">#}
-                                        {#{{ form_start(form_like) }}#}
-                                        {#{{ form_row(form_like.send) }}#}
-                                        {#{{ form_end(form_like) }}#}
-                                    {#</div>#}
-                                {#{% endif %}#}
+
+                            {#{% if form_like is not empty %}#}
+                            {#{% if show_status_like == 1 %}#}
+                            {#<div class="blog-like-form active">#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
+                            {#</div>#}
                             {#{% endif %}#}
 
+                            {#{% if show_status_like == 0 %}#}
+                            {#<div class="blog-like-form">#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
+                            {#</div>#}
+                            {#{% endif %}#}
+                            {#{% endif %}#}
                             {#<div class="blog-like-form active">#}
-                                {#{{ form_start(form_like) }}#}
-                                {#{{ form_row(form_like.send) }}#}
-                                {#{{ form_end(form_like) }}#}
+                            {#{{ form_start(form_like) }}#}
+                            {#{{ form_row(form_like.send) }}#}
+                            {#{{ form_end(form_like) }}#}
                             {#</div>#}
 
-                            {#<div class="blog-like-count">#}
-                                {#{% for like in show_count_like %}#}
-                                    {#{{ like.like_count }}#}
-                                {#{% endfor %}#}
+
+                            <div class="blog-like-count">
+                                {{ post.count_post_like }}
                             </div>
                         </div>
                         <div class="body-footer-teg">
                             <i class="fa fa-tags" aria-hidden="true"></i>
-                            {% for tag in post.tag %}
+                            {% for tag in post.0.tag %}
                                 <a href="{{ path('tag', {'id' : tag.id, 'name' : tag.name|replace ({' ': '_'})}) }}">{{ tag.name|join(', ') }} {% if not loop.last %} , {% endif %} </a>
                             {% endfor %}
                         </div>
